# diplom

./: .gitignore  generate_colab_nb.py  pyproject.toml
notebooks/: gemma_sft_ipo_colab.ipynb
src/: fetch_vk_group.py  my_session.session  test.ipynb
src/data/: collector.py  eda_processed_posts.ipynb  generate_prompts.py  make_dataset.py  prepare_finetune_data.py  prepocess.ipynb  preprocess.py  split_dataset.py
src/inference/: 01_generate_base.py  02_generate_sft.py  03_generate_ipo.py  04_merge_results.py
src/training/: config.py
src/validation/: post_classification.py  post_evaluation.py
