[project]
name = "diplom"
version = "0.1.0"
description = "Дипломная работа"
authors = [
    {name = "Simen",email = "stepanovsb322@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "keyring (>=25.6.0,<26.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "logger (>=1.4,<2.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dotenv>=0.9.9",
    "typer>=0.24.1",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]

[tool.uv.workspace]
members = [
    "venv",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
